@@ -156,7 +156,7 @@ class ModernTemplate extends QuickTemplate {
 		if ( !isset( $sidebar['SEARCH'] ) ) $sidebar['SEARCH'] = true;
 		if ( !isset( $sidebar['TOOLBOX'] ) ) $sidebar['TOOLBOX'] = true;
 		if ( !isset( $sidebar['LANGUAGES'] ) ) $sidebar['LANGUAGES'] = true;
-
+		
 		foreach ($sidebar as $boxName => $cont) {
 			if ( $boxName == 'SEARCH' ) {
 				$this->searchBox();
@@ -165,7 +165,10 @@ class ModernTemplate extends QuickTemplate {
 			} elseif ( $boxName == 'LANGUAGES' ) {
 				$this->languageBox();
 			} else {
-				$this->customBox( $boxName, $cont );
+				if( wfRunHooks( 'SkinSidebarOutputSpecialBox', array( &$this, $boxName, $cont ) ) ) {
+					# If no hook returned false, then output a normal box
+					$this->customBox( $boxName, $cont );
+				}
 			}
 		}
 	?>
@@ -349,4 +352,5 @@ class ModernTemplate extends QuickTemplate {
 	}
 
 } // end of class
-?>
+
+
